infra/kubernetes/tenants/demo-meme/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-meme
  labels:
    platform.tier: tenant
