infra/kubernetes/tenants/demo-meme/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-site
  namespace: demo-meme
spec:
  type: ClusterIP
  selector:
    app: meme-site
  ports:
    - name: http
      port: 80
      targetPort: http
